--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,10 @@
 {
-	"id": "sample-plugin",
-	"name": "Sample Plugin",
-	"version": "1.0.0",
-	"minAppVersion": "0.15.0",
-	"description": "Demonstrates some of the capabilities of the Obsidian API.",
-	"author": "Obsidian",
-	"authorUrl": "https://obsidian.md",
-	"fundingUrl": "https://obsidian.md/pricing",
+	"id": "todo-google-calendar",
+    "name": "Todo Google Calendar",
+	"version": "1.1.0",
+	"minAppVersion": "1.0.0",
+	"description": "Sync your Todo files with Google Calendar",
+	"author": "Yutaro Kuchiki",
+	"authorUrl": "https://x.com/p_r_ogram",
 	"isDesktopOnly": false
 }
