--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,16 +1,26 @@
 {
   "compilerOptions": {
     "baseUrl": ".",
+    // --- 推奨: ビルド先を別フォルダに出すなら rootDir/outDir を指定 ---
+    // "rootDir": "src",
+    // "outDir": "build",
+
     "inlineSourceMap": true,
     "inlineSources": true,
+
     "module": "ESNext",
     "target": "ES6",
-    "allowJs": true,
-    "noImplicitAny": true,
     "moduleResolution": "node",
-    "importHelpers": true,
-    "isolatedModules": true,
+
+    // --- strict 全体を有効にしたい場合は "strict": true でもOK ---
+    // すでに "noImplicitAny" や "strictNullChecks" など細かく設定済みならそのままでも大丈夫
+    "noImplicitAny": true,
     "strictNullChecks": true,
+
+    "allowJs": true,
+    "importHelpers": true,   // tslib を使うなら true
+    "isolatedModules": true,
+
     "lib": [
       "DOM",
       "ES5",
@@ -19,6 +29,7 @@
     ]
   },
   "include": [
-    "**/*.ts"
+    // --- src 配下だけを明示的にコンパイルしたい場合 ---
+    "src/**/*.ts"
   ]
 }
